Bootstrap info command works!